--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
       </tr>
     </table>
 
-    
+    <hr>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contactme.html">Contact Me</a>
   </body>
 </html>
